--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anthwal/nestjs-storage",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Nestjs file system wrapping flydrive",
   "author": "Arun Anthwal",
   "license": "MIT",
@@ -45,6 +45,7 @@
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
+    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "@slynova/flydrive": "^1.0.2",
     "@slynova/flydrive-gcs": "^1.0.2",
     "@slynova/flydrive-s3": "^1.0.2",
