--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "jest": "jest",
     "build": "rimraf -rf dist && tsc -p ./tsconfig.lib.json",
-    "lint": "eslint 'lib/**/*.ts' --fix",
+    "lint": "DEBUG=eslint:eslint eslint --fix \"{lib,tests}/**/*.ts\"",
     "prepublish:npm": "npm run build",
     "publish:npm": "npm publish --access public",
     "prepublish:next": "npm run build",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-angular": "^9.1.1",
+    "@eslint/js": "^9.23.0",
     "@nestjs/common": "^10.4.6",
     "@nestjs/core": "^10.4.6",
     "@nestjs/platform-express": "^10.4.6",
@@ -29,20 +30,21 @@
     "@slynova/flydrive-s3": "^1.0.2",
     "@types/jest": "^28.1.7",
     "@types/node": "^20.17.5",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
     "console-testing-library": "^0.3.1",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^10.2.11",
-    "prettier": "^3.3.3",
+    "prettier": "3.5.3",
     "reflect-metadata": "^0.1.13",
     "release-it": "14.11.8",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.28.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
