--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "ES2023",
     "sourceMap": false,
     "baseUrl": ".",
     "rootDir": ".",
