--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "release": "release-it"
   },
   "devDependencies": {
+    "@anthwal/flydrive": "^1.2.0",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-angular": "^9.1.1",
     "@eslint/js": "^9.23.0",
@@ -25,9 +26,6 @@
     "@nestjs/core": "^10.4.6",
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/testing": "^10.4.6",
-    "@slynova/flydrive": "^1.0.2",
-    "@slynova/flydrive-gcs": "^1.0.2",
-    "@slynova/flydrive-s3": "^1.0.2",
     "@types/jest": "^28.1.7",
     "@types/node": "^20.17.5",
     "console-testing-library": "^0.3.1",
@@ -48,9 +46,7 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
-    "@slynova/flydrive": "^1.0.2",
-    "@slynova/flydrive-gcs": "^1.0.2",
-    "@slynova/flydrive-s3": "^1.0.2",
+    "@anthwal/flydrive": "^1.2.0",
     "reflect-metadata": "^0.1.13"
   },
   "lint-staged": {
