--- a/package.json
+++ b/package.json
@@ -19,25 +19,24 @@
   },
   "devDependencies": {
     "@anthwal/flydrive": "^1.2.0",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-angular": "^9.1.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-angular": "^19.8.0",
     "@eslint/js": "^9.23.0",
-    "@nestjs/common": "^10.4.6",
-    "@nestjs/core": "^10.4.6",
-    "@nestjs/platform-express": "^10.4.6",
-    "@nestjs/testing": "^10.4.6",
-    "@types/jest": "^28.1.7",
-    "@types/node": "^20.17.5",
-    "console-testing-library": "^0.3.1",
+    "@nestjs/common": "^11.0.13",
+    "@nestjs/core": "^11.0.13",
+    "@nestjs/platform-express": "^11.0.13",
+    "@nestjs/testing": "^11.0.13",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
-    "reflect-metadata": "^0.1.13",
-    "release-it": "14.11.8",
+    "reflect-metadata": "^0.2.2",
+    "release-it": "^18.1.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.2.5",
@@ -45,9 +44,9 @@
     "typescript-eslint": "^8.28.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
     "@anthwal/flydrive": "^1.2.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.2.2"
   },
   "lint-staged": {
     "*.ts": [
