--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "peerDependencies": {
     "@nestjs/common": "^6.10.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
     "@anthwal/flydrive": "^1.2.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.1.13 || ^0.2.2"
   },
   "lint-staged": {
     "*.ts": [
